# wz_monster

./: Cargo.toml  README.md
assets/: player.png-autosave.kra
client/: Cargo.toml
client/src/: animation.rs  lib.rs  main.rs  network.rs  player_input.rs  plugin.rs
client/src/entities/: player.rs  player_input.rs
client/src/network/: system.rs
game_core/: Cargo.toml
game_core/src/: entities.rs  lib.rs  network.rs
game_core/src/decor/: component.rs  system.rs
game_core/src/entities/: player.rs  texture.rs  weapons.rs
game_core/src/entities/decor/: system.rs
game_core/src/entities/player/: component.rs  entity.rs  player_texture.rs  system.rs  texture.rs  utils.rs  weapon_fx_texture.rs  weapon_texture.rs
game_core/src/entities/weapons/: component.rs  entity.rs  system.rs  texture.rs
game_core/src/network/: network.rs  network_entities.rs  utils.rs
game_core/src/player/: animation.rs  command.rs  component.rs  math.rs  mod.rs  texture.rs
game_core/src/texture/: entity.rs  frame.rs  macro.rs  math.rs  mod.rs  system.rs
game_core/src/weapon/: animation.rs  command.rs  component.rs  fx_texture.rs  mod.rs  texture.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  plugin.rs  system.rs
server/src/network/: player.rs  system.rs
server/src/system/: decor_system.rs  network_system.rs  player_system.rs
src/: main.rs
src/entities/: decor.rs  player.rs
src/entities/player/: component.rs  player_input.rs  system.rs
