[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
game_core = { path = "../game_core" }
bevy = "0.16.1"
bevy-inspector-egui = "0.32.0"
bevy_renet2 = { version = "0.10.0", features = ["netcode", "native_transport"] }
bincode = "1.3"
bevy_egui = "0.34"
renet2_visualizer = { version = "0.10.0", features = ["bevy"] }

