[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_renet2 = { version = "0.10.0", features = ["netcode", "native_transport"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.34"
renet2_visualizer = { version = "0.10.0", features = ["bevy"] }
fastrand = "2.0"
bevy_rapier2d = "0.30.0"
game_core = { path = "../game_core" }